--- a/templates/pets/create_pet.html
+++ b/templates/pets/create_pet.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <!-- Starts Head Section -->
 <head>
-    <link rel="stylesheet" href="/static/css/styles.css">
-    <link rel="icon" type="image/x-icon" href="/static/images/free-30-instagram-stories-icons23_122570.png">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}">
     <title>Petstagram</title>
 </head>
 <!-- End Head Section -->
@@ -18,7 +19,7 @@
             <div class="logo">
                 <!-- Link to Home Page -->
                 <a href="#">
-                    <img width="50px" src="/static/images/free-30-instagram-stories-icons23_122570.png" alt="img1">
+                    <img width="50px" src="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}" alt="img1">
                 </a>
 
                 <!-- Link to Home Page -->
@@ -64,14 +65,16 @@
 
 <!-- Starts Main Section -->
 <main>
-    <!-- Start Edit Pet Section -->
+
+    <!-- Start Add Pet Section-->
     <div class="edit-delete edit-photo">
-        <h2>Edit Pet</h2>
-        <!-- Start Edit Pet From -->
-        <form action="">
+        <h2>Add pet</h2>
+
+        <!-- Start Add Pet Form -->
+        <form action="#">
             <p>
                 <label for="pet-name">Pet name: </label>
-                <input type="text" placeholder="Name" value="Sasho">
+                <input type="text" placeholder="Pet name">
             </p>
             <p>
                 <label for="pet-date">Date of birth: </label>
@@ -79,17 +82,15 @@
             </p>
             <p>
                 <label for="pet-image">Link to image: </label>
-                <input type="text" placeholder="Link to image"
-                       value="https://i.natgeofe.com/n/de94c416-6d23-45f5-9708-e8d56289268e/naturepl_01132178.jpg?w=636&h=631"
-                       alt="pet image">
+                <input type="text" placeholder="Link to image">
             </p>
-            <!-- Edit Pet Button -->
-            <button class="edit-btn" type="submit">Edit</button>
+            <!-- Add Pet Button -->
+            <button class="add-btn" type="submit">Add Pet</button>
         </form>
-        <!-- End Edit Pet Form -->
+        <!-- End Add Pet Form -->
 
     </div>
-    <!-- End Edit Pet Section -->
+    <!-- End Add Pet Section -->
 
 </main>
 <!-- End Main Section -->
