--- a/templates/pets/delete_pet.html
+++ b/templates/pets/delete_pet.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <!-- Starts Head Section -->
 <head>
-    <link rel="stylesheet" href="/static/css/styles.css">
-    <link rel="icon" type="image/x-icon" href="/static/images/free-30-instagram-stories-icons23_122570.png">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}">
     <title>Petstagram</title>
 </head>
 <!-- End Head Section -->
@@ -18,7 +19,7 @@
             <div class="logo">
                 <!-- Link to Home Page -->
                 <a href="#">
-                    <img width="50px" src="/static/images/free-30-instagram-stories-icons23_122570.png" alt="img1">
+                    <img width="50px" src="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}" alt="img1">
                 </a>
 
                 <!-- Link to Home Page -->
@@ -64,33 +65,35 @@
 
 <!-- Starts Main Section -->
 <main>
-
-    <!-- Start Add Pet Section-->
+    <!-- Starts Delete Pet Section -->
     <div class="edit-delete edit-photo">
-        <h2>Add pet</h2>
-
-        <!-- Start Add Pet Form -->
+        <h2>Delete pet</h2>
+        <!-- Starts Delete Pet Form -->
         <form action="#">
             <p>
                 <label for="pet-name">Pet name: </label>
-                <input type="text" placeholder="Pet name">
+                <input type="text" placeholder="Name" value="Sasho" disabled>
             </p>
             <p>
                 <label for="pet-date">Date of birth: </label>
-                <input type="date">
+                <input type="date" disabled>
             </p>
             <p>
                 <label for="pet-image">Link to image: </label>
-                <input type="text" placeholder="Link to image">
+                <input type="text" placeholder="Link to image"
+                       value="https://i.natgeofe.com/n/de94c416-6d23-45f5-9708-e8d56289268e/naturepl_01132178.jpg?w=636&h=631"
+                       alt="pet image" disabled>
             </p>
-            <!-- Add Pet Button -->
-            <button class="add-btn" type="submit">Add Pet</button>
+            <!-- Delete Pet Button -->
+            <button class="delete-btn" type="submit">Delete</button>
+            <!-- Go Back Button -->
+            <a class="btn btn-primary" href="javascript:history.back()">
+                <button class="edit-btn" type="button">Go back</button>
+            </a>
         </form>
-        <!-- End Add Pet Form -->
-
+        <!-- End Delete Pet Form -->
     </div>
-    <!-- End Add Pet Section -->
-
+    <!-- End Delete Pet Section -->
 </main>
 <!-- End Main Section -->
 
