--- a/templates/photos/create_photo.html
+++ b/templates/photos/create_photo.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <!-- Starts Head Section -->
 <head>
-    <link rel="stylesheet" href="/static/css/styles.css">
-    <link rel="icon" type="image/x-icon" href="/static/images/free-30-instagram-stories-icons23_122570.png">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}">
     <title>Petstagram</title>
 </head>
 <!-- End Head Section -->
@@ -18,7 +19,7 @@
             <div class="logo">
                 <!-- Link to Home Page -->
                 <a href="#">
-                    <img width="50px" src="/static/images/free-30-instagram-stories-icons23_122570.png" alt="img1">
+                    <img width="50px" src="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}" alt="img1">
                 </a>
 
                 <!-- Link to Home Page -->
@@ -64,44 +65,42 @@
 
 <!-- Starts Main Section -->
 <main>
-
-    <!-- Starts Edit Photo Section -->
+    <!-- Start Add Photo Section -->
     <div class="edit-delete edit-photo">
-        <h2>Edit photo</h2>
-
-        <!-- Starts Edit Photo Form -->
-        <form action="">
+        <h2>Add photo</h2>
+        <!-- Start Add Photo Form -->
+        <form action="" enctype="multipart/form-data">
+            <p>
+                <label for="id_photo_file">Photo file:</label>
+                <input type="file">
+            </p>
 
             <p>
                 <label for="id_description">Description:</label>
-                <input type="text" value="Sasho is an Axolotl">
+                <input type="text">
             </p>
 
             <p>
                 <label for="id_description">Location:</label>
-                <input type="text" name="photo_shooting_location" maxlength="50" id="id_photo_shooting_location"
-                       value="Bansko, Bulgaria">
+                <input type="text" name="photo_shooting_location" maxlength="50" id="id_photo_shooting_location">
             </p>
 
             <p>
                 <label for="pets">Tag Pets:</label>
 
                 <select name="pets" id="id_tagged_pets" multiple>
-                    <option selected>Sasho</option>
+                    <option>Sasho</option>
                     <option>Perry</option>
                     <option>Bucky</option>
                     <option>Steve</option>
                 </select>
             </p>
-
-            <!-- Edit Photo Button -->
-            <button class="edit-btn" type="submit">Edit Photo</button>
+            <!-- Add Photo Button -->
+            <button class="add-btn" type="submit">Add Photo</button>
         </form>
-        <!-- End Edit Photo Form -->
-
+        <!-- End Add Photo Form -->
     </div>
-    <!-- End Edit Photo Section -->
-
+    <!-- End Add Photo Section -->
 </main>
 <!-- End Main Section -->
 
