--- a/templates/accounts/signin-user.html
+++ b/templates/accounts/signin-user.html
@@ -28,7 +28,7 @@
         <div class="second-option">
 
             <!-- Link to Register Page-->
-            <p>Don't have an account? <a href="#">Register</a></p>
+            <p>Don't have an account? <a href={% url 'signup user' %}>Register</a></p>
         </div>
     </div>
     <!-- End Login Section-->
