--- a/templates/accounts/signup_user.html
+++ b/templates/accounts/signup_user.html
@@ -26,7 +26,7 @@
         <div class="second-option">
 
             <!-- Link to Login Page -->
-            <p>Have an account? <a href="#">Log in</a></p>
+            <p>Have an account? <a href="{% url 'signin user' %}">Log in</a></p>
         </div>
     </div>
     <!-- End Register Section -->
