--- a/templates/pets/details_pet.html
+++ b/templates/pets/details_pet.html
@@ -17,13 +17,14 @@
                 <div class="personal">
                     <div class="edit">
                         <!-- Pet Name -->
-                        <p>{{ pet.name }}</p>
+{#                        <p>{{ pet.name }}</p> pet and object mean same#}
+                        <p>{{ object.name }}</p>
                         <!-- Pet Edit Button -->
-                        <a href="{% url 'edit pet' username='Doncho' pet_slug=pet.slug %}">
+                        <a href="{% url 'edit pet' username='Doncho' pet_slug=object.slug %}">
                             <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}" alt="edit button">
                         </a>
                         <!-- Pet Delete Button -->
-                        <a href="{% url 'delete pet' username='Doncho' pet_slug=pet.slug %}">
+                        <a href="{% url 'delete pet' username='Doncho' pet_slug=object.slug %}">
                             <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
                         </a>
                     </div>
@@ -41,7 +42,7 @@
 
             <!-- IF Photos Start Pet Photos Post Section -->
 
-            {% include 'partials/pet_photos_list.html' with photo_list=pet.petphoto_set.all %}
+            {% include 'partials/pet_photos_list.html' with photo_list=object.petphoto_set.all %}
 
 
         </div>
