--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -14,7 +14,42 @@
                 </button>
             </form>
             <!-- End Searchbar Form -->
-            {% include 'partials/pet_photos_list.html' with photo_list=pet_photos %}
+            {% include 'partials/pet_photos_list.html' with photo_list=object_list %}
+
+            <!-- Start Pagination -->
+            <div class="pagination">
+                <span class="current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+                <span class="step-links-buttons">
+                    <!-- If there are previous and next photos -->
+                    {% if page_obj.has_previous and page_obj.has_next %}
+                        <a href="?page={{ page_obj.previous_page_number }}">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </a>
+                        <a href="?page={{ page_obj.next_page_number }}">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+
+                    <!-- If there are only previous photos -->
+                    {% elif page_obj.has_previous %}
+                        <a href="?page={{ page_obj.previous_page_number }}">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </a>
+                        <a class="disabled" href="#">
+                            <i class="fa-solid fa-arrow-right"></i>
+
+                    <!-- If there are only next photos -->
+                    {% elif page_obj.has_next %}
+                        <a class="disabled" href="#">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        <a href="?page={{ page_obj.next_page_number }}">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                    {% endif %}
+                </span>
+            </div>
+            <!-- End Pagination -->
 
         </div>
     </div>
