--- a/templates/partials/pet_photo_list_item.html
+++ b/templates/partials/pet_photo_list_item.html
@@ -19,7 +19,7 @@
                 <!-- Link to User Profile Page -->
                 <a href="{% url 'details profile' pk=3 %}">
                     <!-- if user has first name and last name -->
-                    Diyan Kalaydzhiev
+                    Doncho
                     <!-- else -->
                     <!-- show user username -->
                 </a>
