--- a/templates/accounts/signup_user.html
+++ b/templates/accounts/signup_user.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load placeholder %}
+
 {% load static %}
 
 {% block main_content %}
@@ -8,17 +10,21 @@
             <h1>Petstagram</h1>
 
             <!-- Start Register Form -->
-            <form action="">
-                <input type="text" placeholder="Username">
+            <form action="{% url 'signup user' %}" method="post">
+                <p>
+                     {{ form.email|placeholder:"Email" }}
+                </p>
+                <p>
+                     {{ form.password1|placeholder:"Password" }}
+                </p>
+                <p>
+                     {{ form.password2|placeholder:"Confirm password" }}
+                </p>
 
-                <input type="email" placeholder="Email">
-
-                <input type="password" placeholder="Password">
-
-                <input type="password" placeholder="Repeat Password">
 
                 <!-- Register Button -->
                 <button type="submit">Register</button>
+                {% csrf_token %}
             </form>
             <!-- End Register Form -->
 
