--- a/templates/accounts/signin-user.html
+++ b/templates/accounts/signin-user.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load placeholder %}
 {% load static %}
 
 {% block main_content %}
@@ -9,18 +10,16 @@
             <h1>Petstagram</h1>
 
             <!-- Start Login Form-->
-            <form action="#">
+            <form action="{% url 'signin user' %}?next={{ next }}" method="post">
                 <p>
-                    <label for="id_username">Username:</label>
-                    <input type="text" placeholder="Username">
+                     {{ form.username|placeholder:"Email" }}
                 </p>
                 <p>
-                    <label for="id_password">Password:</label>
-                    <input type="password" placeholder="Password">
+                     {{ form.password|placeholder:"Password" }}
                 </p>
 
-                <!-- Login Button-->
                 <button type="submit">Log in</button>
+                {% csrf_token %}
             </form>
             <!-- End Login Form -->
 
