--- a/templates/partials/layout/header.html
+++ b/templates/partials/layout/header.html
@@ -35,7 +35,7 @@
                     <li class="nav-item">
 
                         <!-- Link to Profile Page -->
-                        <a href="{% url 'details profile' pk=2 %}">
+                        <a href="{% url 'details profile' pk=request.user.pk %}">
                             <i>Profile</i>
                         </a>
                     </li>
